# haskell-crm

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  haskell-crm.cabal  railway.json  stack.yaml
src/: Main.hs
src/App/: AddConstituent.hs  ConstituentRepoInMemory.hs  ConstituentRepoInterpreter.hs  ConstituentRepoPostgres.hs  Env.hs  LetterGenerator.hs  ListConstituents.hs  UseCases.hs
src/Domain/: Constituent.hs  ConstituentRepo.hs  ConstituentRepoF.hs
test/: AddConstituentSpec.hs  LetterGeneratorSpec.hs  ListConstituentsSpec.hs  Spec.hs  TestInMemory.hs
