cabal-version:       2.2

name:                haskell-crm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-crm#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md


library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , mustache
                     , servant
                     , servant-auth-server
                     , lucid
                     , servant-lucid
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , mtl
                     , dotenv
                     , monad-logger
                     , bytestring
                     , resourcet
                     , aeson
                     , text
                     , http-api-data
                     
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable haskell-crm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , mustache
                     , haskell-crm
                     , hspec
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-server
                     , warp
                     , lucid
                     , servant-lucid
                     , dotenv
                     , monad-logger
                     , bytestring
                     , resourcet
                     , aeson
                     , text
                     , http-api-data
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite haskell-crm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , mustache
                     , hspec
                     , haskell-crm
                     , mtl
                     , resourcet
                     , aeson
                     , text
                     , http-api-data
  ghc-options:         -Wall
